--- a/codepy-main/.godot/editor/editor_layout.cfg
+++ b/codepy-main/.godot/editor/editor_layout.cfg
@@ -1,10 +1,7 @@
 [docks]
 
-dock_3="Scene,Import"
-dock_3_selected_tab_idx=0
-dock_4="FileSystem"
+dock_3_selected_tab_idx=1
 dock_4_selected_tab_idx=0
-dock_5="Inspector,Node,History"
 dock_5_selected_tab_idx=0
 dock_floating={}
 dock_filesystem_h_split_offset=240
@@ -12,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
+dock_filesystem_selected_paths=PackedStringArray("res://scripts/main_menu_enhanced.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://python_backup/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -25,6 +22,9 @@ dock_hsplit_1=0
 dock_hsplit_2=270
 dock_hsplit_3=-270
 dock_hsplit_4=0
+dock_3="Scene,Import"
+dock_4="FileSystem"
+dock_5="Inspector,Node,History"
 
 [EditorNode]
 
@@ -43,7 +43,7 @@ position=Vector2i(0, 29)
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/game_manager.gd"]
+open_scripts=["res://scripts/game_manager.gd", "res://scripts/main_menu_enhanced.gd"]
 selected_script="res://scripts/game_manager.gd"
 open_help=[]
 script_split_offset=200
