--- a/codepy-main/.godot/editor/script_editor_cache.cfg
+++ b/codepy-main/.godot/editor/script_editor_cache.cfg
@@ -7,7 +7,21 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 85,
-"scroll_position": 85.0,
+"scroll_position": 60.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/main_menu_enhanced.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
