--- a/codepy-main/.godot/global_script_class_cache.cfg
+++ b/codepy-main/.godot/global_script_class_cache.cfg
@@ -24,12 +24,28 @@ list=[{
 "path": "res://scripts/audio_manager.gd"
 }, {
 "base": &"Node",
+"class": &"BadgeManager",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scripts/badge_manager.gd"
+}, {
+"base": &"Node",
 "class": &"ConfigFileHandler",
 "icon": "",
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://scripts/config_file_handler.gd"
+}, {
+"base": &"Node",
+"class": &"DailyChallengeManager",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scripts/daily_challenge_manager.gd"
 }, {
 "base": &"Node",
 "class": &"GameManager",
@@ -62,6 +78,14 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://scripts/localization_manager.gd"
+}, {
+"base": &"Node",
+"class": &"PlayerProfileManager",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scripts/player_profile_manager.gd"
 }, {
 "base": &"Node",
 "class": &"SystemManager",
