--- a/codepy-main/.godot/editor/editor_layout.cfg
+++ b/codepy-main/.godot/editor/editor_layout.cfg
@@ -1,21 +1,21 @@
 [docks]
 
-dock_3_selected_tab_idx=1
+dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scripts/main_menu_enhanced.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://PYTHON_BACKUP_SUMMARY.md")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://python_backup/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
 dock_bottom=[]
-dock_closed=[]
+dock_closed=["Import"]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
@@ -32,7 +32,7 @@ open_scenes=PackedStringArray()
 current_scene=""
 center_split_offset=0
 selected_bottom_panel_item=0
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=8
 selected_main_editor_idx=2
 
 [EditorWindow]
@@ -43,8 +43,8 @@ position=Vector2i(0, 29)
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/game_manager.gd", "res://scripts/main_menu_enhanced.gd"]
-selected_script="res://scripts/game_manager.gd"
+open_scripts=["res://scripts/game_manager.gd", "res://scripts/main_menu_enhanced.gd", "res://PYTHON_BACKUP_SUMMARY.md", "res://python_backup/README.md", "res://scripts/teacher_mode_system.gd"]
+selected_script="res://PYTHON_BACKUP_SUMMARY.md"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
@@ -61,3 +61,13 @@ open_shaders=[]
 split_offset=200
 selected_shader=""
 text_shader_zoom_factor=1.0
+
+[editor_log]
+
+log_filter_0=true
+log_filter_2=true
+log_filter_1=false
+log_filter_3=true
+log_filter_4=false
+collapse=false
+show_search=true
