--- a/codepy-main/.godot/editor/editor_layout.cfg
+++ b/codepy-main/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://PYTHON_BACKUP_SUMMARY.md")
+dock_filesystem_selected_paths=PackedStringArray("res://scripts/high_score_manager.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://python_backup/")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -43,8 +43,8 @@ position=Vector2i(0, 29)
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/game_manager.gd", "res://scripts/main_menu_enhanced.gd", "res://PYTHON_BACKUP_SUMMARY.md", "res://python_backup/README.md", "res://scripts/teacher_mode_system.gd"]
-selected_script="res://PYTHON_BACKUP_SUMMARY.md"
+open_scripts=["res://scripts/game_manager.gd", "res://scripts/high_score_manager.gd", "res://scripts/main_menu_enhanced.gd", "res://PYTHON_BACKUP_SUMMARY.md", "res://python_backup/README.md", "res://scripts/teacher_mode_system.gd"]
+selected_script="res://scripts/high_score_manager.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
@@ -66,8 +66,8 @@ text_shader_zoom_factor=1.0
 
 log_filter_0=true
 log_filter_2=true
-log_filter_1=false
-log_filter_3=true
-log_filter_4=false
+log_filter_1=true
+log_filter_3=false
+log_filter_4=true
 collapse=false
 show_search=true
