--- a/codepy-main/.godot/editor/editor_layout.cfg
+++ b/codepy-main/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scripts/high_score_manager.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://python_backup/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/victory_screen.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/", "res://python_backup/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,8 +28,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray()
-current_scene=""
+open_scenes=PackedStringArray("res://scenes/adventure_level.tscn", "res://scenes/adventure_map.tscn", "res://scenes/difficulty_menu.tscn", "res://scenes/game.tscn", "res://scenes/game_scene.tscn", "res://scenes/single_player.tscn", "res://scenes/teacher_portal.tscn", "res://scenes/victory_screen.tscn")
+current_scene="res://scenes/victory_screen.tscn"
 center_split_offset=0
 selected_bottom_panel_item=0
 selected_default_debugger_tab_idx=8
@@ -43,8 +43,8 @@ position=Vector2i(0, 29)
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/game_manager.gd", "res://scripts/high_score_manager.gd", "res://scripts/main_menu_enhanced.gd", "res://PYTHON_BACKUP_SUMMARY.md", "res://python_backup/README.md", "res://scripts/teacher_mode_system.gd"]
-selected_script="res://scripts/high_score_manager.gd"
+open_scripts=["res://scripts/accessibility_manager.gd", "res://scripts/accessibility_ui.gd", "res://scripts/achievement_system.gd", "res://scripts/adventure_level.gd", "res://scripts/adventure_manager.gd", "res://scripts/adventure_map.gd", "res://ADVENTURE_MODE_GUIDE.md", "res://scripts/audio_manager.gd", "res://scripts/badge_manager.gd", "res://CODE_QUALITY_IMPROVEMENTS.md", "res://CODE_QUALITY_IMPROVEMENT_SUMMARY.md", "res://CODE_QUALITY_QUICK_REFERENCE.md", "res://scripts/config_file_handler.gd", "res://scripts/daily_challenge_manager.gd", "res://DEVELOPMENT_REFERENCE.md", "res://scripts/difficulty_menu.gd", "res://scripts/energy_system.gd", "res://EXPORT_CHECKLIST.md", "res://export_presets.cfg", "res://FAILSAFE_COMPLETE.md", "res://FAILSAFE_COMPLETION_SUMMARY.md", "res://scripts/feature_config.gd", "res://FINAL_SUMMARY.txt", "res://scripts/game.gd", "res://scripts/gameplay_enhancement_system.gd", "res://scripts/game_manager.gd", "res://scripts/game_scene.gd", "res://scripts/high_score_manager.gd", "res://IMPLEMENTATION_COMPLETE.md", "res://IMPLEMENTATION_STATUS.md", "res://scripts/localization_manager.gd", "res://scripts/main_menu.gd", "res://scripts/main_menu_enhanced.gd", "res://scripts/multiplayer_lobby_enhanced.gd", "res://scripts/player_profile_manager.gd", "res://PYTHON_BACKUP_SUMMARY.md", "res://python_backup/README.md", "res://scripts/single_player.gd", "res://scripts/splash_screen.gd", "res://scripts/system_manager.gd", "res://SYSTEM_MANAGER_INTEGRATION.md", "res://scripts/teacher_mode_system.gd", "res://scripts/teacher_portal.gd", "res://scripts/thumbnail_generator.gd", "res://scripts/victory_screen.gd", "res://scripts/victory_screen_enhanced.gd"]
+selected_script="res://SYSTEM_MANAGER_INTEGRATION.md"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
