--- a/codepy-main/.godot/editor/editor_layout.cfg
+++ b/codepy-main/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_floating={}
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
@@ -29,9 +29,9 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/adventure_level.tscn", "res://scenes/adventure_map.tscn", "res://scenes/difficulty_menu.tscn", "res://scenes/game.tscn", "res://scenes/game_scene.tscn", "res://scenes/single_player.tscn", "res://scenes/teacher_portal.tscn", "res://scenes/victory_screen.tscn")
-current_scene="res://scenes/victory_screen.tscn"
+current_scene="res://scenes/adventure_level.tscn"
 center_split_offset=0
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
 
