--- a/codepy-main/.godot/editor/project_metadata.cfg
+++ b/codepy-main/.godot/editor/project_metadata.cfg
@@ -16,6 +16,7 @@ scenes=["res://scenes/victory_screen.tscn", "res://scenes/teacher_portal.tscn", 
 export=Rect2(510, 350, 900, 670)
 editor_settings=Rect2(510, 250, 900, 700)
 create_new_node=Rect2(510, 250, 900, 700)
+project_settings=Rect2(360, 250, 1200, 700)
 
 [debug_options]
 
