--- a/codepy-main/.godot/editor/editor_layout.cfg
+++ b/codepy-main/.godot/editor/editor_layout.cfg
@@ -31,7 +31,7 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://scenes/adventure_level.tscn", "res://scenes/adventure_map.tscn", "res://scenes/difficulty_menu.tscn", "res://scenes/game.tscn", "res://scenes/game_scene.tscn", "res://scenes/single_player.tscn", "res://scenes/teacher_portal.tscn", "res://scenes/victory_screen.tscn")
 current_scene="res://scenes/adventure_level.tscn"
 center_split_offset=0
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
 
@@ -66,7 +66,7 @@ text_shader_zoom_factor=1.0
 
 log_filter_0=true
 log_filter_2=true
-log_filter_1=true
+log_filter_1=false
 log_filter_3=false
 log_filter_4=true
 collapse=false
